--- a/finding.html
+++ b/finding.html
@@ -68,6 +68,8 @@
   <!-- Page Content -->
   <div class="container">
 
+    <!-- Following are some text describing the empirical findings of this project -->
+
     <h1 class="text-left">Overview of Empirical Findings</h1>
         <p class="text-left" style= "background-color: PowderBlue"> These are three of the research findings that emerged from our empirical investigation. Each is supported with more detailed analysis on the pages linked below. Please see the background discussion for details on experimental methodology and key concepts underlying the empirical findings.
         </p>
