--- a/problem.html
+++ b/problem.html
@@ -106,10 +106,12 @@
 
     <select id = "Degree Type"> 
     <option value = "1" selected = "selected">Node DP</option>
+    <option value = "2">Edge DP</option>
     </select>
 
     <select id = "Utility"> 
     <option value = "1" selected = "selected">Degree Distribution</option>
+    <option value = "2">Subgraph Counting</option>
     </select>
 
     <select id = "Dataset"> 
