--- a/performance.html
+++ b/performance.html
@@ -79,6 +79,128 @@
 
     <h1 class="text-left">Privacy Performance Frontier</h1>
 
+    <select id = "Degree Type"> 
+    <option value = "1" selected = "selected">Node DP</option>
+    <option value = "2">Edge DP</option>
+    </select>
+
+    <select id = "Utility"> 
+    <option value = "1" selected = "selected">Degree Distribution</option>
+    <option value = "2">Subgraph Counting</option>
+    </select>
+
+    <select id = "Dataset"> 
+    <option value = "1" selected = "selected">Dataset:</option>
+    <option value = "2">CIT</option>
+    <option value = "3">DBLP</option>
+    <option value = "4">Facebook</option>
+    <option value = "5">WIKI</option>
+    </select>
+
+    <select id = "Query"> 
+    <option value = "1" selected = "selected">4kclique</option>
+    <option value = "2">3kstar</option>
+    <option value = "3">2ktriangle</option>
+    <option value = "4">0ktriangle</option>
+    </select>
+
+    <button onclick="frontierFn()">Apply Setting</button>
+    <br>
+    <p id = "result"> Please specify input settings. </p>
+
+    <div id="DDContainer">
+      <div style="float: left;" id="scatterFrontier"></div>
+    </div>
+
+    <script>
+
+      function SGCFn() {
+          var temp_data = document.getElementById("Dataset").value;
+          var temp_query = document.getElementById("Query").value;
+          if (temp_data == 1) {
+            // Tell user they need to choose a dataset.
+            document.getElementById("result").innerHTML = "Dataset is not specified !";
+            var dataChosen = 'EMPTY';
+            var graphSource = "PlotBlank.png";
+            console.log(graphSource);
+          } 
+          else {
+            document.getElementById("result").innerHTML = "This input choice is valid.";
+            
+            // dataChosen stores the dataset that user has chosen
+            if (temp_data == 2) {
+              var dataChosen = 'CIT';
+            } else if (temp_data == 3) {
+              var dataChosen = 'DBLP';
+            } 
+            else if (temp_data == 4) {
+              var dataChosen = 'FACEBOOK';
+            } else {
+              var dataChosen = "WIKI";
+            }
+            // graphSource stores the source (.png) of an image of the original dataset
+            var graphSource = "Plot"+dataChosen+".png";
+            // queryChosen stores the query that user has chosen
+            if (temp_query == 1) {
+              var queryChosen = "4kclique"
+            } else if (temp_query == 2) {
+              var queryChosen = "3kstar"
+            } else if (temp_query == 3) {
+              var queryChosen = "2ktriangle"
+            } else {
+              var queryChosen = "0ktriangle"
+            }
+          }
+
+          // This part draws the frontier 
+
+          var algorithms = ['Ladder', 'LAP']
+          var csvName = "performance/"+dataChosen + queryChosen+ '.csv';
+          Plotly.d3.csv(csvName, (err, rows) => {
+          var tempPlot = document.getElementById('scatterFrontier')
+          var data = algorithms.map(y => {
+            var d = rows.filter(r => r.algorithm === y)         
+            return {
+              type: 'scatter',
+              name: y,
+              x: d.map(r => r.epsilon),
+              y: d.map(r => r.timeMean)
+            }
+          })
+
+          var layout = {
+            autosize: false,
+            width: 500,
+            height: 300,
+            xaxis: {
+              type: 'log',
+              autorange: true
+            },
+            margin: {
+              l: 30,
+              r: 30,
+              b: 30,
+              t: 35,
+              pad: 4
+            },
+            mode:'markers',
+            hovermode:'closest',
+            title:'Privacy Frontier '+dataChosen
+          };        
+          Plotly.newPlot('scatterFrontier', data, layout,{showSendToCloud: true});
+        });
+      };
+
+      function frontierFn() {
+        if (document.getElementById("Degree Type").value == 1 && document.getElementById("Utility").value == 1) {
+          DDFn();
+        } else {
+          SGCFn();
+        }
+      }
+
+    </script>
+
   </div>
 
   <!-- Bootstrap core JavaScript -->
